welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:3: error: type mismatch;
 found   : String("19")
 required: Int
		return "19"
                       ^